--- a/style.css
+++ b/style.css
@@ -134,6 +134,38 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 5rem;
+}
+
+.search-user-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  gap: 0.5rem;
+}
+
+#search-user-input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: 2rem;
+  background: var(--bgCard);
+  color: var(--text);
+  font-size: 0.8rem;
+  border: 1px solid var(--text);
+  border-radius: 0.5rem;
+  padding-left: 0.5rem;
+}
+
+.customize-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   gap: 0.5rem;
 }
 
@@ -157,7 +189,8 @@ body {
 }
 
 .option-btn:hover {
-  background: var(--bgCard);
+  background: var(--text);
+  color: var(--bgCard);
   border: 1px solid var(--bg);
 }
 
@@ -169,7 +202,7 @@ body {
   width: 55%;
   height: 46%;
   position: relative;
-  z-index: 2;
+  z-index: 3;
   background: rgba(0, 0, 0, 0.4);
   border-radius: 2rem;
   bottom: calc(-54%);
@@ -210,7 +243,7 @@ body {
 }
 
 .avatar-container {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   width: 105%;
@@ -219,11 +252,43 @@ body {
   left: 20%;
   background: white;
   border-radius: 50%;
+  position: relative;
+  z-index: 2;
 }
 
 .avatar-container img {
   height: 100%;
   width: 100%;
-  padding: 0.5rem;
   border-radius: 50%;
+  border: 0.5rem solid var(--text);
+  position: relative;
+}
+
+.download-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 0.5rem;
+}
+
+.download-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.5rem;
+  background: var(--bg);
+  color: var(--text);
+  font-size: 0.8rem;
+  border: 1px solid var(--border-button);
+  border-radius: 0.5rem;
+  cursor: pointer;
+  padding: 0.5rem;
+}
+
+.download-btn:hover {
+  background: var(--text);
+  color: var(--bgCard);
+  border: 1px solid var(--bg);
 }
