--- a/style.css
+++ b/style.css
@@ -277,6 +277,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 60%;
   height: 2.5rem;
   background: var(--bg);
   color: var(--text);
@@ -284,11 +285,46 @@ body {
   border: 1px solid var(--border-button);
   border-radius: 0.5rem;
   cursor: pointer;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 
 .download-btn:hover {
   background: var(--text);
   color: var(--bgCard);
   border: 1px solid var(--bg);
+}
+
+@media screen and (max-width: 980px) {
+  body {
+    height: 100%;
+    width: 100vw;
+  }
+  .main {
+    width: 100%;
+    height: 100%;
+  }
+  .main-container {
+    flex-direction: column;
+    height: 100%;
+    gap: 1.5rem;
+  }
+  .card-side {
+    width: 100%;
+    height: 50%;
+    padding: 1rem;
+  }
+
+  .options-side {
+    width: 100%;
+    height: 50%;
+    padding-bottom: 2rem;
+  }
+
+  .card-container {
+    width: min(400px);
+    height: min(610px);
+  }
+  .download-btn {
+    width: 50%;
+  }
 }
